# ROS2CV

./: README.md
ROS2CV/: README.md
camera/: CMakeLists.txt  package.xml
camera/include/camera/: DxImageProc.h  GxIAPI.h  Tictoc.hpp  camera_api.h
camera/params/: daheng159.yaml  ost.txt  ost.yaml
camera/src/: camera_api.cpp  camera_node.cpp
detector/: CMakeLists.txt  package.xml
detector/include/detector/: PNPSolver.hpp  armor_detect.h  ovinference.h
detector/model/: rm-net16.xml
detector/src/: armor_detect.cpp  ovinference.cpp
include/: Tictoc.hpp  data_type.h
install/: local_setup.sh  setup.sh
install/my_interfaces/include/my_interfaces/my_interfaces/msg/: robot_status.hpp  send_data.hpp
install/my_interfaces/include/my_interfaces/my_interfaces/msg/detail/: armor__functions.h  armor__rosidl_typesupport_fastrtps_c.h  armor__rosidl_typesupport_fastrtps_cpp.hpp  armor__rosidl_typesupport_introspection_c.h  armor__rosidl_typesupport_introspection_cpp.hpp  armor__struct.h  armor__type_support.c  armor__type_support.cpp  robot_status__functions.h  robot_status__rosidl_typesupport_fastrtps_cpp.hpp  robot_status__rosidl_typesupport_introspection_cpp.hpp  robot_status__struct.hpp  robot_status__traits.hpp  robot_status__type_support.cpp  robot_status__type_support.h  send_data__functions.c  send_data__rosidl_typesupport_fastrtps_c.h  send_data__rosidl_typesupport_introspection_cpp.hpp  send_data__traits.hpp  send_data__type_support.h
install/my_interfaces/local/lib/python3.10/dist-packages/my_interfaces/: _my_interfaces_s.ep.rosidl_typesupport_c.c  _my_interfaces_s.ep.rosidl_typesupport_fastrtps_c.c  _my_interfaces_s.ep.rosidl_typesupport_introspection_c.c
install/my_interfaces/local/lib/python3.10/dist-packages/my_interfaces/msg/: _armor_s.c  _robot_status.py  _robot_status_s.c
install/my_interfaces/share/my_interfaces/: package.sh
install/my_interfaces/share/my_interfaces/msg/: Armor.idl  Armor.msg  RobotStatus.idl  RobotStatus.msg
install/predictor/share/predictor/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
my_interfaces/: CMakeLists.txt  package.xml
my_interfaces/msg/: Armor.msg  RobotStatus.msg  SendData.msg
predictor/: CMakeLists.txt  package.xml
predictor/include/predictor/: AdaptiveEKF.hpp  anglesolver.hpp  kalmanFilter.hpp  predictor.h
predictor/params/: params.yaml
predictor/src/: predictor.cpp
robot_startup/: CMakeLists.txt  package.xml
robot_startup/launch/: ares_cv.launch.py
script/: ros_bridge.sh  start.sh
serial/: CMakeLists.txt  package.xml
serial/include/serial/: serial.h
serial/src/: serial.cpp
